# GPU_Diffeomorphic_LogDemons

./: .gitignore  CMakeLists.txt  readme.md
Matlab_IO/: loadbin.m  readme.md  saveToBin.m
Matlab_ref/: Readme.md  compose.m  iminterpolate.m  register.m
src/: CMakeLists.txt  LogDemonsReg.cu  LogDemonsReg.cuh  LogDemonsRegGPU.cu  LogDemonsRegGPU.cuh  LogDemonsRegGPUKernels.cu  LogDemonsRegGPUKernels.cuh  LogDemonsRegGPU_testfun.cu  LogDemonsRegGPU_testfun.cuh  LogDemonsReg_testfun.cu  LogDemonsReg_testfun.cuh  Registration.cpp  Registration.h  RegistrationGPU.cu  RegistrationGPU.cuh  RegistrationIO.h  main.cpp  main.cu  registrationKernels.cu  registrationKernels.cuh  wrapper.h
test_data/: GenerateMatlabResults.m  Readme.md
test_data/Matlab_IO/: compare.m  getslice.m  readme.md
test_data/Matlab_ref/: demons.m  expfield.m  findupdate.m  imagepad.m  imgaussian.m
test_data/compose/: Cmp_compose_CPU_GPU.m  Cmp_compose_CPU_Matlab.m
test_data/expfield/: Cmp_expfield_CPU_GPU.m  Cmp_expfield_CPU_Matlab.m
test_data/findupdate/: Cmp_update_CPU_GPU.m
test_data/gradient/: Cmp_gradient_CPU_GPU.m  Cmp_gradient_CPU_Matlab.m
test_data/imguassian/: Cmp_imgaussian_CPU_GPU.m  Cmp_imgaussian_CPU_Matlab.m
test_data/iminterpolate/: Cmp_iminterpolate_CPU_GPU.m  Cmp_iminterpolate_CPU_Matlab.m
test_data/jacobian/: Cmp_jacobian_CPU_GPU.m  Cmp_jacobian_CPU_Matlab.m
test_data/register_results/: Cmp_iter1_CPU_GPU.m  Cmp_register_CPU_GPU.m  Cmp_register_CPU_Matlab.m
